# backend-core/src/controllers/tracking-session.controller.ts
@@ -1,6 +1,5 @@
 import { Body, Controller, Delete, Get, Param, Put, UseGuards } from '@nestjs/common';
-import { ApiOkResponse, ApiTags, getSchemaPath } from '@nestjs/swagger';
-import { Client } from '../entities/client.entity';
+import { ApiExtraModels, ApiOkResponse, ApiTags, getSchemaPath } from '@nestjs/swagger';
 import { TrackingSession, TrackingSessionRequest } from '../entities/tracking-session.entity';
 import { TenantGuard } from '../guards/tenant.guard';
 import { UserContext, UserCtx } from '../helpers/context.decorator';
@@ -16,20 +15,21 @@ export class TrackingSessionController {
 
   @Get('active')
   @CustomOperationName()
-  @ApiOkResponse({ schema: { oneOf: [{ $ref: getSchemaPath(Client) }, { type: 'null' }] } })
-  public read(@UserCtx() userContext: UserContext, @Param() params: EntitiesPathParams): Promise<TrackingSession | null> {
+  @ApiExtraModels(TrackingSession)
+  @ApiOkResponse({ schema: { oneOf: [{ $ref: getSchemaPath(TrackingSession) }, { type: 'null' }] } })
+  public readActive(@UserCtx() userContext: UserContext, @Param() params: EntitiesPathParams): Promise<TrackingSession | null> {
     return this.trackingSessionService.read(userContext, params);
   }
 
   @Put('active')
   @CustomOperationName()
-  public upsert(@UserCtx() userContext: UserContext, @Param() params: EntitiesPathParams, @Body() request: TrackingSessionRequest): Promise<void> {
+  public updateActive(@UserCtx() userContext: UserContext, @Param() params: EntitiesPathParams, @Body() request: TrackingSessionRequest): Promise<void> {
     return this.trackingSessionService.upsert(userContext, params, request);
   }
 
   @Delete('active')
   @CustomOperationName()
-  public delete(@UserCtx() userContext: UserContext, @Param() params: EntitiesPathParams): Promise<void> {
+  public stopActive(@UserCtx() userContext: UserContext, @Param() params: EntitiesPathParams): Promise<void> {
     return this.trackingSessionService.delete(userContext, params);
   }
 }
